<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.ashubuntu.al_quran_khatam.MainActivity"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/nextKhatamDateLabelText"
                    android:id="@+id/nextKhatamDateLabel"
                    style="@style/NextKhatamDateLabelStyle"
                    android:paddingBottom="@dimen/my_common_spacing"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/statusBar"
                android:measureWithLargestChild="true">

                <ImageButton
                    android:id="@+id/previousDateButton"
                    android:onClick="getKhatamStatus"
                    android:contentDescription="@string/previousKhatamDateButton"
                    android:src="@drawable/prev_date_icon"
                    style="@style/KhatamDateForwardBackwardButtonStyle"
                    android:layout_width="0dp"
                    android:layout_weight=".25" />

                <Spinner
                    android:layout_height="wrap_content"
                    android:id="@+id/nextKhatamDatesDropDown"
                    style="@style/NextKhatamDatesDropDownStyle"
                    android:layout_width="0dp"
                    android:layout_weight=".5" />

                <ImageButton
                    android:id="@+id/nextDateButton"
                    android:onClick="getKhatamStatus"
                    style="@style/KhatamDateForwardBackwardButtonStyle"
                    android:src="@drawable/next_date_icon"
                    android:contentDescription="@string/nextKhatamDateButton"
                    android:layout_width="0dp"
                    android:layout_weight=".25" />

            </TableRow>

        </TableLayout>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow android:layout_marginBottom="@dimen/my_common_spacing"
                android:gravity="center_horizontal">
                <TextView
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/khatamStatusLabel"
                    android:id="@+id/textView"
                    android:paddingBottom="10dp"
                    android:textStyle="bold"
                    android:layout_gravity="center_horizontal" />
            </TableRow>

            <TableRow
                android:background="#FFFFFFFF"
                android:theme="@style/ParasButtonStyle">

                <Button
                    android:text="@string/paraOneButtonLabel"
                    android:id="@+id/paraOneButton"
                    android:onClick="flipStatus" />

                <Button
                    android:text="@string/paraTwoButtonLabel"
                    android:id="@+id/paraTwoButton"
                    android:onClick="flipStatus" />

                <Button
                    android:text="@string/paraThreeButtonLabel"
                    android:id="@+id/paraThreeButton"
                    android:onClick="flipStatus" />

                <Button
                    android:text="@string/paraFourButtonLabel"
                    android:id="@+id/paraFourButton"
                    android:onClick="flipStatus" />

                <Button
                    android:text="@string/paraFiveButtonLabel"
                    android:id="@+id/paraFiveButton"
                    android:onClick="flipStatus" />

            </TableRow>

            <TableRow
                android:background="#FFFFFFFF"
                android:theme="@style/ParasButtonStyle">

                <Button
                    android:text="@string/paraSixButtonLabel"
                    android:id="@+id/paraSixButton"
                    android:onClick="flipStatus" />

                <Button
                    android:text="@string/paraSevenButtonLabel"
                    android:id="@+id/paraSevenButton"
                    android:onClick="flipStatus" />

                <Button
                    android:text="@string/paraEightButtonLabel"
                    android:id="@+id/paraEightButton"
                    android:onClick="flipStatus" />

                <Button
                    android:text="@string/paraNineButtonLabel"
                    android:id="@+id/paraNineButton"
                    android:onClick="flipStatus" />

                <Button
                    android:text="@string/paraTenButtonLabel"
                    android:id="@+id/paraTenButton"
                    android:onClick="flipStatus" />

            </TableRow>

            <TableRow
                android:background="#FFFFFFFF"
                android:theme="@style/ParasButtonStyle">

                <Button
                    android:text="@string/paraElevenButtonLabel"
                    android:id="@+id/paraElevenButton"
                    android:onClick="flipStatus" />

                <Button
                    android:text="@string/paraTwelveButtonLabel"
                    android:id="@+id/paraTwelveButton"
                    android:onClick="flipStatus" />

                <Button
                    android:text="@string/paraThirteenButtonLabel"
                    android:id="@+id/paraThirteenButton"
                    android:onClick="flipStatus" />

                <Button
                    android:text="@string/paraFourteenButtonLabel"
                    android:id="@+id/paraFourteenButton"
                    android:onClick="flipStatus" />

                <Button
                    android:text="@string/paraFifteenButtonLabel"
                    android:id="@+id/paraFifteenButton"
                    android:onClick="flipStatus" />

            </TableRow>

            <TableRow
                android:background="#FFFFFFFF"
                android:theme="@style/ParasButtonStyle">

                <Button
                    android:text="@string/paraSixteenButtonLabel"
                    android:id="@+id/paraSixteenButton"
                    android:onClick="flipStatus" />

                <Button
                    android:text="@string/paraSeventeenButtonLabel"
                    android:id="@+id/paraSeventeenButton"
                    android:onClick="flipStatus" />

                <Button
                    android:text="@string/paraEighteenButtonLabel"
                    android:id="@+id/paraEighteenButton"
                    android:onClick="flipStatus" />

                <Button
                    android:text="@string/paraNineteenButtonLabel"
                    android:id="@+id/paraNineteenButton"
                    android:onClick="flipStatus" />

                <Button
                    android:text="@string/paraTwentyButtonLabel"
                    android:id="@+id/paraTwentyButton"
                    android:onClick="flipStatus" />

            </TableRow>

            <TableRow
                android:background="#FFFFFFFF"
                android:theme="@style/ParasButtonStyle">

                <Button
                    android:text="@string/paraTwentyOneButtonLabel"
                    android:id="@+id/paraTwentyOneButton"
                    android:onClick="flipStatus" />

                <Button
                    android:text="@string/paraTwentyTwoButtonLabel"
                    android:id="@+id/paraTwentyTwoButton"
                    android:onClick="flipStatus" />

                <Button
                    android:text="@string/paraTwentyThreeButtonLabel"
                    android:id="@+id/paraTwentyThreeButton"
                    android:onClick="flipStatus" />

                <Button
                    android:text="@string/paraTwentyFourButtonLabel"
                    android:id="@+id/paraTwentyFourButton"
                    android:onClick="flipStatus" />

                <Button
                    android:text="@string/paraTwentyFiveButtonLabel"
                    android:id="@+id/paraTwentyFiveButton"
                    android:onClick="flipStatus" />

            </TableRow>

            <TableRow
                android:background="#FFFFFFFF"
                android:theme="@style/ParasButtonStyle">

                <Button
                    android:text="@string/paraTwentySixButtonLabel"
                    android:id="@+id/paraTwentySixButton"
                    android:onClick="flipStatus" />

                <Button
                    android:text="@string/paraTwentySevenButtonLabel"
                    android:id="@+id/paraTwentySevenButton"
                    android:onClick="flipStatus" />

                <Button
                    android:text="@string/paraTwentyEightButtonLabel"
                    android:id="@+id/paraTwentyEightButton"
                    android:onClick="flipStatus" />

                <Button
                    android:text="@string/paraTwentyNineButtonLabel"
                    android:id="@+id/paraTwentyNineButton"
                    android:onClick="flipStatus" />

                <Button
                    android:text="@string/paraThirtyButtonLabel"
                    android:id="@+id/paraThirtyButton"
                    android:onClick="flipStatus" />

            </TableRow>

            <TableRow android:gravity="center_horizontal"
                android:layout_marginTop="@dimen/my_common_spacing"
                android:layout_marginBottom="@dimen/activity_vertical_margin">
                <TextView
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:id="@+id/statusMessage"
                    android:singleLine="false"
                    android:visibility="visible"
                    android:textStyle="italic"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </TableRow>

            <TableRow android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_marginBottom="@dimen/activity_vertical_margin">
                <Button
                    android:id="@+id/updateStatusButton"
                    android:text="@string/updateStatusLabel"
                    android:onClick="updateKhatamStatus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal" />
            </TableRow>

        </TableLayout>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow
                android:gravity="center_horizontal"
                android:layout_marginBottom="15dp">

                <Button
                    android:id="@+id/createNewDateButton"
                    android:onClick="createNewKhatamDate"
                    android:text="@string/createNewDateButtonText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal" />

            </TableRow>

            <TableRow android:gravity="center_horizontal">

                <Button
                    android:id="@+id/exitButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="endApplication"
                    android:text="@string/exitButtonText"
                    android:contentDescription="@string/exitApplicationDesc"
                    android:layout_gravity="center_horizontal" />

            </TableRow>

        </TableLayout>

    </LinearLayout>

</ScrollView>

