<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.ashubuntu.al_quran_khatam.DeleteKhatamDate"
    android:fillViewport="false">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Choose a Date to Delete"
            android:id="@+id/dateChooserTV"
            android:textSize="17sp"
            android:layout_below="@+id/deleteDateHeader"
            android:layout_marginBottom="@dimen/activity_vertical_margin" />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/nextKhatamDatesDropDown"
            android:layout_alignParentTop="false"
            android:layout_toRightOf="@+id/dateChooserTV"
            android:layout_toEndOf="@+id/dateChooserTV"
            android:layout_marginLeft="39dp"
            android:layout_marginStart="39dp"
            android:layout_below="@+id/deleteDateHeader"
            android:layout_marginBottom="@dimen/activity_vertical_margin" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/nextKhatamDatesDropDown"
            android:layout_centerHorizontal="true"
            android:id="@+id/parasGrid"
            android:layout_marginTop="@dimen/activity_vertical_margin">
            <TableRow>

                <Button
                    android:id="@+id/paraOneButton"
                    style="@style/ParasButtonStyle"
                    android:text="@string/paraOneButtonLabel" />

                <Button
                    android:id="@+id/paraTwoButton"
                    style="@style/ParasButtonStyle"
                    android:text="@string/paraTwoButtonLabel" />

                <Button
                    android:id="@+id/paraThreeButton"
                    style="@style/ParasButtonStyle"
                    android:text="@string/paraThreeButtonLabel" />

                <Button
                    android:id="@+id/paraFourButton"
                    style="@style/ParasButtonStyle"
                    android:text="@string/paraFourButtonLabel" />

                <Button
                    android:id="@+id/paraFiveButton"
                    style="@style/ParasButtonStyle"
                    android:text="@string/paraFiveButtonLabel" />
            </TableRow>

            <TableRow>

                <Button
                    android:id="@+id/paraSixButton"
                    style="@style/ParasButtonStyle"
                    android:text="@string/paraSixButtonLabel" />

                <Button
                    android:id="@+id/paraSevenButton"
                    style="@style/ParasButtonStyle"
                    android:text="@string/paraSevenButtonLabel" />

                <Button
                    android:id="@+id/paraEightButton"
                    style="@style/ParasButtonStyle"
                    android:text="@string/paraEightButtonLabel" />

                <Button
                    android:id="@+id/paraNineButton"
                    style="@style/ParasButtonStyle"
                    android:text="@string/paraNineButtonLabel" />

                <Button
                    android:id="@+id/paraTenButton"
                    style="@style/ParasButtonStyle"
                    android:text="@string/paraTenButtonLabel" />
            </TableRow>

            <TableRow>

                <Button
                    android:id="@+id/paraElevenButton"
                    style="@style/ParasButtonStyle"
                    android:text="@string/paraElevenButtonLabel" />

                <Button
                    android:id="@+id/paraTwelveButton"
                    style="@style/ParasButtonStyle"
                    android:text="@string/paraTwelveButtonLabel" />

                <Button
                    android:id="@+id/paraThirteenButton"
                    style="@style/ParasButtonStyle"
                    android:text="@string/paraThirteenButtonLabel" />

                <Button
                    android:id="@+id/paraFourteenButton"
                    style="@style/ParasButtonStyle"
                    android:text="@string/paraFourteenButtonLabel" />

                <Button
                    android:id="@+id/paraFifteenButton"
                    style="@style/ParasButtonStyle"
                    android:text="@string/paraFifteenButtonLabel" />
            </TableRow>

            <TableRow>

                <Button
                    android:id="@+id/paraSixteenButton"
                    style="@style/ParasButtonStyle"
                    android:text="@string/paraSixteenButtonLabel" />

                <Button
                    android:id="@+id/paraSeventeenButton"
                    style="@style/ParasButtonStyle"
                    android:text="@string/paraSeventeenButtonLabel" />

                <Button
                    android:id="@+id/paraEighteenButton"
                    style="@style/ParasButtonStyle"
                    android:text="@string/paraEighteenButtonLabel" />

                <Button
                    android:id="@+id/paraNineteenButton"
                    style="@style/ParasButtonStyle"
                    android:text="@string/paraNineteenButtonLabel" />

                <Button
                    android:id="@+id/paraTwentyButton"
                    style="@style/ParasButtonStyle"
                    android:text="@string/paraTwentyButtonLabel" />
            </TableRow>

            <TableRow>

                <Button
                    android:id="@+id/paraTwentyOneButton"
                    style="@style/ParasButtonStyle"
                    android:text="@string/paraTwentyOneButtonLabel" />

                <Button
                    android:id="@+id/paraTwentyTwoButton"
                    style="@style/ParasButtonStyle"
                    android:text="@string/paraTwentyTwoButtonLabel" />

                <Button
                    android:id="@+id/paraTwentyThreeButton"
                    style="@style/ParasButtonStyle"
                    android:text="@string/paraTwentyThreeButtonLabel" />

                <Button
                    android:id="@+id/paraTwentyFourButton"
                    style="@style/ParasButtonStyle"
                    android:text="@string/paraTwentyFourButtonLabel" />

                <Button
                    android:id="@+id/paraTwentyFiveButton"
                    style="@style/ParasButtonStyle"
                    android:text="@string/paraTwentyFiveButtonLabel" />
            </TableRow>

            <TableRow>

                <Button
                    android:id="@+id/paraTwentySixButton"
                    style="@style/ParasButtonStyle"
                    android:text="@string/paraTwentySixButtonLabel" />

                <Button
                    android:id="@+id/paraTwentySevenButton"
                    style="@style/ParasButtonStyle"
                    android:text="@string/paraTwentySevenButtonLabel" />

                <Button
                    android:id="@+id/paraTwentyEightButton"
                    style="@style/ParasButtonStyle"
                    android:text="@string/paraTwentyEightButtonLabel" />

                <Button
                    android:id="@+id/paraTwentyNineButton"
                    style="@style/ParasButtonStyle"
                    android:text="@string/paraTwentyNineButtonLabel" />

                <Button
                    android:id="@+id/paraThirtyButton"
                    style="@style/ParasButtonStyle"
                    android:text="@string/paraThirtyButtonLabel" />
            </TableRow>

            <TableRow android:gravity="center_horizontal"
                android:layout_marginTop="@dimen/my_common_spacing"
                android:layout_marginBottom="@dimen/activity_vertical_margin">
                <TextView
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:id="@+id/statusMessage"
                    android:singleLine="false"
                    android:visibility="visible"
                    android:textStyle="italic"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </TableRow>

        </TableLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Delete"
            android:id="@+id/deleteBtn"
            android:layout_below="@id/parasGrid"
            android:layout_centerHorizontal="true"
            android:onClick="deleteDate" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Home"
            android:id="@id/home"
            android:layout_below="@id/deleteBtn"
            android:layout_centerHorizontal="true"
            android:onClick="goToHome" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="Delete a Khatam Date"
            android:id="@+id/deleteDateHeader"
            android:layout_centerHorizontal="true"
            android:layout_alignParentTop="true"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_alignParentBottom="false"
            android:textStyle="bold" />

    </RelativeLayout>

</ScrollView>
